cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_297.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/cms.c:211: error: DEAD_STORE
  The value written to &keyidx (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/cms.c:211:5: Write of unused value
209.       char *to = NULL, *from = NULL, *subject = NULL, *prog;
210.       cms_key_param *key_first = NULL, *key_param = NULL;
211.       int flags = CMS_DETACHED, noout = 0, print = 0, keyidx = -1, vpmtouched = 0;
           ^
212.       int informat = FORMAT_SMIME, outformat = FORMAT_SMIME;
213.       int operation = 0, ret = 1, rr_print = 0, rr_allorfirst = -1;
